--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -68,6 +70,121 @@
             </div>
         </div>
     </nav>
+
+    <!-- Movie Night Section -->
+    <section class="movie-night">
+        <div class="content">
+            <div class="info">
+                <p>
+                    Join us for a fantastic
+                    <span class="movie-night-text">movie night</span> filled with popcorn, laughter, and great company! Whether you're a fan of thrilling
+                    action, heartwarming dramas, or side-splitting comedies, we've got a
+                    film lineup to cater to all tastes. Save the date and bring your
+                    favorite snacks to make it a memorable evening.
+                </p>
+                <button class="btn-movie">Join</button>
+            </div>
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img
+                            src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/b6f5eb64-887c-43b1-aaba-d52a4c59a379"
+                            alt="The Queen's Gambit" />
+                        <div class="overlay">
+                            <span>8.5</span>
+                            <h2>The Queen's Gambit</h2>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img
+                            class="img-position"
+                            src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e906353b-fde0-4518-9a03-16545c1161bd"
+                            alt="Breaking Bad" />
+                        <div class="overlay">
+                            <span>9.5</span>
+                            <h2>Breaking Bad</h2>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img
+                            src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/fc21e481-e28a-41a8-9db3-3b62c1ddc17e"
+                            alt="Wednesday" />
+                        <div class="overlay">
+                            <span>8.1</span>
+                            <h2>Wednesday</h2>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img
+                            src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/6b6ad966-79e1-4d3c-8f92-566d0fee8082"
+                            alt="Stranger Things" />
+                        <div class="overlay">
+                            <span>8.7</span>
+                            <h2>Stranger Things</h2>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img
+                            src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/2ad44f5d-2215-4416-9c9b-2bae3be51a67"
+                            alt="Anne with an E" />
+                        <div class="overlay">
+                            <span>8.6</span>
+                            <h2>Anne with an E</h2>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img
+                            src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/aa8fe914-741f-4bf4-ad4a-24f19d1f4178"
+                            alt="Friends" />
+                        <div class="overlay">
+                            <span>8.9</span>
+                            <h2>Friends</h2>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img
+                            class="img-position"
+                            src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/d5f10b4f-7d34-45bd-bb5f-5f1530c2ac1c"
+                            alt="The Crown" />
+                        <div class="overlay">
+                            <span>8.6</span>
+                            <h2>The Crown</h2>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img
+                            src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/7cbac263-7c55-4428-908e-31018dc1bce3"
+                            alt="House M.D." />
+                        <div class="overlay">
+                            <span>8.7</span>
+                            <h2>House M.D.</h2>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img
+                            src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/2929f534-3bc3-4cbd-b84c-80df863d5a38"
+                            alt="Game of Thrones" />
+                        <div class="overlay">
+                            <span>9.2</span>
+                            <h2>Game of Thrones</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </section>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -164,9 +281,8 @@
             </div>
         </div>
     </section>
-</body>
-</html>    <
-!-- Benefits Section -->
+
+    <!-- Benefits Section -->
     <section class="benefits" id="benefits">
         <div class="container">
             <h2>Why Choose Scoreazy Mentorship</h2>
@@ -236,43 +352,55 @@
     <section class="testimonials">
         <div class="container">
             <h2>Student Success Stories</h2>
-            <div class="testimonials-carousel">
-                <div class="testimonial-card active">
-                    <div class="testimonial-content">
-                        <p>"My mentor helped me improve my grades from C+ to A- in just 3 months. The personalized approach made all the difference!"</p>
+            <div class="testimonials-wrapper">
+                <button class="testimonial-arrow testimonial-arrow-left" id="testimonialPrev">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
+                <div class="testimonials-carousel">
+                    <div class="testimonial-card active">
+                        <div class="testimonial-content">
+                            <p>"My mentor helped me improve my grades from C+ to A- in just 3 months. The personalized approach made all the difference!"</p>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-photo">👩‍💻</div>
+                            <div class="author-info">
+                                <h4>Sarah Chen</h4>
+                                <span>Computer Science, MIT</span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="testimonial-author">
-                        <div class="author-photo">👩‍💻</div>
-                        <div class="author-info">
-                            <h4>Sarah Chen</h4>
-                            <span>Computer Science, MIT</span>
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <p>"The university application guidance was incredible. I got into my dream school with a full scholarship!"</p>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-photo">👨‍⚕️</div>
+                            <div class="author-info">
+                                <h4>Marcus Johnson</h4>
+                                <span>Pre-Med, Harvard</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <div class="testimonial-content">
+                            <p>"24/7 doubt solving saved my semester. Having instant access to expert help was a game-changer."</p>
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="author-photo">👩‍🔬</div>
+                            <div class="author-info">
+                                <h4>Priya Patel</h4>
+                                <span>Engineering, Stanford</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        <p>"The university application guidance was incredible. I got into my dream school with a full scholarship!"</p>
-                    </div>
-                    <div class="testimonial-author">
-                        <div class="author-photo">👨‍⚕️</div>
-                        <div class="author-info">
-                            <h4>Marcus Johnson</h4>
-                            <span>Pre-Med, Harvard</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        <p>"24/7 doubt solving saved my semester. Having instant access to expert help was a game-changer."</p>
-                    </div>
-                    <div class="testimonial-author">
-                        <div class="author-photo">👩‍🔬</div>
-                        <div class="author-info">
-                            <h4>Priya Patel</h4>
-                            <span>Engineering, Stanford</span>
-                        </div>
-                    </div>
-                </div>
+                <button class="testimonial-arrow testimonial-arrow-right" id="testimonialNext">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
             </div>
             <div class="carousel-dots">
                 <span class="dot active" data-slide="0"></span>
@@ -485,6 +613,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
